--- a/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
+++ b/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
@@ -54,7 +54,7 @@
 
     .delete {
       background-color: hsl(var(--destructive));
-      text: hsl(var(--destructive-foreground));
+      color: hsl(var(--destructive-foreground));
     }
   }
 
