--- a/src/components/grid/gridContainer/css/gridContainer.scss
+++ b/src/components/grid/gridContainer/css/gridContainer.scss
@@ -57,7 +57,7 @@
       "main";
 
     &__main {
-      padding: 1rem;
+      padding: calc(2rem + 4px) 1rem;
     }
 
     // // Need high specificity
