--- a/src/LandingPages/dashboardPage/components/dashboardSwitch/components/createDashboard/css/createDashboard.module.css
+++ b/src/LandingPages/dashboardPage/components/dashboardSwitch/components/createDashboard/css/createDashboard.module.css
@@ -1,16 +1,24 @@
 .createDashboardModal {
-  padding: 1rem;
+  padding: 2rem;
   background-color: hsl(var(--card));
+  min-width: 400px;
+  cursor: default;
 }
 .createDashboardModal h2 {
   font-size: 1.2rem;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
 }
 .createDashboardModal p {
   color: hsl(var(--muted-foreground));
   margin-bottom: 1.2rem;
   font-size: 0.875rem;
   max-width: calc(100% - 45px);
+}
+.createDashboardModal .errorMessageLi {
+  color: hsl(var(--destructive-text));
+  font-size: 0.875rem;
+  margin: 0.5rem 0 1.2rem 1rem;
+  list-style-type: disc !important;
 }
 .createDashboardModal .CTA {
   display: flex;
@@ -20,6 +28,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .createDashboardModal {
+    padding: 2rem 1rem;
+  }
   .modal {
     min-width: 0;
     min-height: 0;
