--- a/src/LandingPages/dashboardPage/css/dashboard.module.css
+++ b/src/LandingPages/dashboardPage/css/dashboard.module.css
@@ -6,6 +6,6 @@
 
 @media screen and (max-width: 768px) {
   .dashboard {
-    max-height: calc(100dvh - (2rem + 4px) * 2 - var(--nav-height));
+    max-height: calc(100dvh - 2rem - var(--nav-height));
   }
 }/*# sourceMappingURL=dashboard.module.css.map */
