--- a/src/LandingPages/loginOrSignup/components/signupHalfpage/css/signupHalfPage.module.scss
+++ b/src/LandingPages/loginOrSignup/components/signupHalfpage/css/signupHalfPage.module.scss
@@ -12,20 +12,29 @@
     perspective-origin: 100% 0;
     transform-style: preserve-3d;
     .svg {
-      min-width: 100%;
-      contain: strict;
-      min-height: 100%;
+      max-width: 50%;
+      max-height: 50%;
 
-      transform: translateX(200%) translateY(100%) scale(3) rotateX(45deg)
-        rotateY(45deg) rotate(324deg);
+      transform: scale(0.7) translateX(0%) translateY(0) rotateX(45deg)
+        rotateY(37deg) rotate(324deg);
       transform-origin: bottom right;
       backface-visibility: hidden;
+      border-radius: 1rem;
+
+      &::after {
+        content: "";
+        pointer-events: none;
+        position: absolute;
+        inset: 0;
+        z-index: 2;
+        background: linear-gradient(
+          to bottom,
+          transparent 50%,
+          var(--background) 100%
+        );
+      }
 
       .svgElements {
-        width: 100%;
-        height: 100%;
-        transform: scale(0.2) translateY(-150%) translateX(-200%);
-
         .navbar {
           width: fit-content;
           height: fit-content;
