--- a/src/components/createTodo/css/createTask.scss
+++ b/src/components/createTodo/css/createTask.scss
@@ -35,6 +35,10 @@
     max-width: 450px !important;
   }
 
+  .customTextArea {
+    overflow: visible !important;
+  }
+
   select {
     padding: 0.5rem;
   }
