--- a/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.css
+++ b/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.css
@@ -4,7 +4,6 @@
   align-items: flex-start;
   justify-content: flex-start;
   padding: 1rem;
-  gap: 32px;
   position: fixed;
   top: calc(var(--nav-height) + 0.5rem);
   padding-top: calc(2rem + 4px);
@@ -25,8 +24,11 @@
   z-index: 1000;
 }
 .taskViewer .topCTAwrapper {
+  position: absolute;
+  top: 0.5rem;
+  right: 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   width: 100%;
 }
@@ -68,6 +70,8 @@
   border-right: none;
   border-radius: 0;
   border-color: hsl(var(--border));
+  margin-top: 0;
+  padding-top: 0;
   white-space: nowrap;
   font-size: 1.2rem;
   overflow: hidden;
@@ -78,6 +82,11 @@
 }
 .taskViewer .dashboardSelect {
   padding: 4px;
+  appearance: none; /* Reset default appearance */
+  -webkit-appearance: none; /* For Safari and Chrome */
+  -moz-appearance: none; /* For Firefox */
+  height: auto;
+  box-sizing: content-box;
 }
 .taskViewer .dashboardSelect .dashboardOption {
   padding: 4px 5px;
@@ -124,6 +133,10 @@
   flex-direction: column;
   gap: 0.5rem;
   width: 100%;
+}
+
+.contentWrapper {
+  overflow: visible !important;
 }
 
 .info {
