--- a/src/LandingPages/dashboardPage/components/dashboardSwitch/components/createDashboard/css/createDashboard.module.css
+++ b/src/LandingPages/dashboardPage/components/dashboardSwitch/components/createDashboard/css/createDashboard.module.css
@@ -2,6 +2,7 @@
   padding: 2rem;
   background-color: hsl(var(--card));
   min-width: 400px;
+  z-index: 10;
   cursor: default;
 }
 .createDashboardModal h2 {
@@ -36,16 +37,15 @@
 
 @media screen and (max-width: 768px) {
   .createDashboardModal {
-    padding: 2rem 1rem;
+    padding: 1rem;
+    min-width: 100%;
+    border-radius: 0.5rem;
   }
   .modal {
-    min-width: 0;
-    min-height: 0;
-    align-self: center;
-    width: -moz-max-content !important;
-    width: max-content !important;
-    margin: 0 auto;
-    border-radius: 1rem;
-    overflow: hidden;
+    background-color: transparent !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
   }
 }/*# sourceMappingURL=createDashboard.module.css.map */
