--- a/src/LandingPages/dashboardPage/components/dashboardSwitch/components/createDashboard/css/createDashboard.module.scss
+++ b/src/LandingPages/dashboardPage/components/dashboardSwitch/components/createDashboard/css/createDashboard.module.scss
@@ -3,6 +3,7 @@
 
   background-color: hsl(var(--card));
   min-width: 400px;
+  z-index: 10;
   cursor: default;
 
   h2 {
@@ -41,15 +42,16 @@
 
 @media screen and (max-width: 768px) {
   .createDashboardModal {
-    padding: 2rem 1rem;
+    padding: 1rem;
+    min-width: 100%;
+    border-radius: 0.5rem;
   }
   .modal {
-    min-width: 0;
-    min-height: 0;
-    align-self: center;
-    width: max-content !important;
-    margin: 0 auto;
-    border-radius: 1rem;
-    overflow: hidden;
+    background-color: transparent !important;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
   }
 }
