--- a/src/components/modal/css/modal.scss
+++ b/src/components/modal/css/modal.scss
@@ -22,6 +22,7 @@
     position: absolute;
     top: 1rem;
     right: 1rem;
+    background-color: hsl(var(--muted));
   }
 
   &__backdrop-clickable {
@@ -58,5 +59,8 @@
     left: 0;
     right: 0;
     bottom: 0;
+  }
+  .modal::backdrop {
+    background: hsl(0 0% 0% / 90%);
   }
 }
