--- a/src/LandingPages/dashboardPage/components/dashboard/dashboardHeader/css/dashboardHeader.css
+++ b/src/LandingPages/dashboardPage/components/dashboard/dashboardHeader/css/dashboardHeader.css
@@ -50,4 +50,6 @@
   .dashboard-header__header__activeTab {
     font-size: 1.5rem;
   }
-}/*# sourceMappingURL=dashboardHeader.css.map */
+}
+
+/*# sourceMappingURL=dashboardHeader.css.map */
