--- a/src/LandingPages/dashboardPage/components/dashboard/dashboardSwitch/components/createDashboardButton/css/createDashboardButton.module.css
+++ b/src/LandingPages/dashboardPage/components/dashboard/dashboardSwitch/components/createDashboardButton/css/createDashboardButton.module.css
@@ -4,4 +4,6 @@
 .add .plus {
   width: 12px;
   height: 12px;
-}/*# sourceMappingURL=createDashboardButton.module.css.map */
+}
+
+/*# sourceMappingURL=createDashboardButton.module.css.map */
