--- a/src/LandingPages/dashboardPage/components/overview/progressSummary/css/taskSummary.module.css
+++ b/src/LandingPages/dashboardPage/components/overview/progressSummary/css/taskSummary.module.css
@@ -109,4 +109,6 @@
   .taskDeleted .description {
     color: hsl(var(--white)/0.5);
   }
-}/*# sourceMappingURL=taskSummary.module.css.map */
+}
+
+/*# sourceMappingURL=taskSummary.module.css.map */
