--- a/src/LandingPages/dashboardPage/components/dashboard/taskboard/components/settingsContextButton/css/taskboardSettingsContextButton.module.css
+++ b/src/LandingPages/dashboardPage/components/dashboard/taskboard/components/settingsContextButton/css/taskboardSettingsContextButton.module.css
@@ -21,4 +21,6 @@
   height: 0.5px;
   background-color: hsl(var(--muted));
   z-index: 10;
-}/*# sourceMappingURL=taskboardSettingsContextButton.module.css.map */
+}
+
+/*# sourceMappingURL=taskboardSettingsContextButton.module.css.map */
