--- a/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.css
+++ b/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.css
@@ -1,4 +1,5 @@
 .draggableColumn {
+  scroll-snap-type: none;
   background-color: hsl(var(--card));
   height: fit-content;
   padding: 1rem 0.5rem;
@@ -60,6 +61,7 @@
 .isDragging {
   opacity: 0.5;
   border-color: red;
+  scroll-snap-align: none;
 }
 .isDragging .columnHeader {
   cursor: grabbing;
