--- a/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.scss
+++ b/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.scss
@@ -1,4 +1,6 @@
 .draggableColumn {
+  scroll-snap-type: none;
+
   background-color: hsl(var(--card));
   height: fit-content;
   padding: 1rem 0.5rem;
@@ -6,7 +8,7 @@
   z-index: 1000;
   border: 1px solid hsl(var(--border));
   display: flex;
-    flex-direction: column;
+  flex-direction: column;
   gap: 1rem;
 
   .columnHeader {
@@ -22,18 +24,18 @@
 
   }
 
-.emptyContainer {
-  padding: 0.75rem;
-  border: 2px dashed hsl(var(--border));
-  border-radius: 0.25rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  .emptyContainer {
+    padding: 0.75rem;
+    border: 2px dashed hsl(var(--border));
+    border-radius: 0.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  .emptyText {
-  font-size: 14px;
+    .emptyText {
+      font-size: 14px;
+    }
   }
-}
 
   .taskContainer {
     list-style-type: none;
@@ -76,6 +78,8 @@
 .isDragging {
   opacity: 0.5;
   border-color: red;
+  scroll-snap-align: none;
+
 
 
   .columnHeader {
