--- a/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.css
+++ b/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.css
@@ -2,18 +2,18 @@
   scroll-snap-type: none;
   background-color: hsl(var(--card));
   height: fit-content;
-  padding: 1rem 0.5rem;
+  padding: 0 0.5rem 1rem;
   border-radius: var(--radius);
   z-index: 1000;
   border: 1px solid hsl(var(--border));
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  transition: height 0.3s ease;
 }
 .draggableColumn .columnHeader {
   display: flex;
   align-items: flex-start;
-  padding: 0.5rem;
+  padding: 1rem 0 1rem;
   background-color: hsl(var(--background));
   border-radius: calc(var(--radius) / 2);
   border: 1px solid transparent;
@@ -39,6 +39,7 @@
   gap: 0.5rem;
 }
 .draggableColumn .limitButton {
+  margin-top: 1rem;
   width: 100%;
   background-color: transparent;
   color: hsl(var(--foreground));
@@ -48,6 +49,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 14px;
 }
 .draggableColumn .limitButton:active, .draggableColumn .limitButton:hover {
   text-decoration: underline;
@@ -57,10 +59,13 @@
   width: 14px;
   height: 14px;
 }
+.draggableColumn.showHiddenTasks {
+  height: calc-size(fit-content);
+}
 
 .isDragging {
   opacity: 0.5;
-  border-color: red;
+  border-color: hsl(var(--primary));
   scroll-snap-align: none;
 }
 .isDragging .columnHeader {
