--- a/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.scss
+++ b/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.scss
@@ -3,18 +3,21 @@
 
   background-color: hsl(var(--card));
   height: fit-content;
-  padding: 1rem 0.5rem;
+  padding: 0 0.5rem 1rem;
+
   border-radius: var(--radius);
   z-index: 1000;
   border: 1px solid hsl(var(--border));
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+
+  transition: height 0.3s ease;
+
 
   .columnHeader {
     display: flex;
     align-items: flex-start;
-    padding: 0.5rem;
+    padding: 1rem 0 1rem;
     background-color: hsl(var(--background));
     border-radius: calc(var(--radius) / 2);
     border: 1px solid transparent;
@@ -45,10 +48,12 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+
+
   }
 
   .limitButton {
-
+    margin-top: 1rem;
     width: 100%;
     background-color: transparent;
     color: hsl(var(--foreground));
@@ -58,6 +63,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 14px;
 
 
     &:active, &:hover {
@@ -72,14 +78,17 @@
     }
   }
 
+  &.showHiddenTasks {
+    height: calc-size(fit-content);
+  }
 
 }
 
+
 .isDragging {
   opacity: 0.5;
-  border-color: red;
+  border-color: hsl(var(--primary));
   scroll-snap-align: none;
-
 
 
   .columnHeader {
