--- a/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/responsiveStyles.module.css
+++ b/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/responsiveStyles.module.css
@@ -1,5 +1,4 @@
 @media screen and (max-width: 600px) {
-
   .taskboard {
     display: flex;
     scroll-snap-type: x proximity; /* Change from mandatory to proximity */
@@ -10,18 +9,12 @@
     scroll-behavior: smooth; /* Add smooth scrolling */
     padding: 0 1rem; /* Add some padding for better edge visibility */
     gap: 1rem; /* Add gap between columns */
-
-
     scrollbar-width: none;
     -ms-overflow-style: none;
-
-
   }
-
   .taskboard::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera */
   }
-
   .columnPagination {
     position: fixed;
     bottom: 0;
@@ -29,48 +22,37 @@
     right: 0;
     height: max-height;
     z-index: 1000;
-
     padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-
-    background-color: hsl(var(--background) / 0.5);
+    background-color: hsl(var(--background)/0.5);
     backdrop-filter: blur(12px);
-
-    .paginationInfo {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 0.25rem;
-
-
-      .indexes {
-        font-size: 0.75rem;
-        color: hsl(var(--foreground));
-      }
-
-      .currentColumnInView {
-        color: hsl(var(--muted-foreground));
-        font-size: 0.6rem;
-      }
-    }
-
-    .paginationButtons {
-        border: none;
-        outline: none;
-        background-color: transparent;
-
-      .chevron {
-      }
-      .chevronLeft {
-        rotate: 180deg;
-      }
-      .chevronRight {
-
-      }
-    }
+  }
+  .columnPagination .paginationInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.25rem;
+  }
+  .columnPagination .paginationInfo .indexes {
+    font-size: 0.75rem;
+    color: hsl(var(--foreground));
+  }
+  .columnPagination .paginationInfo .currentColumnInView {
+    color: hsl(var(--muted-foreground));
+    font-size: 0.6rem;
+  }
+  .columnPagination .paginationButtons {
+    border: none;
+    outline: none;
+    background-color: transparent;
+  }
+  .columnPagination .paginationButtons .chevronLeft {
+    rotate: 180deg;
   }
 }
+
+/*# sourceMappingURL=responsiveStyles.module.css.map */
