--- a/src/LandingPages/dashboardPage/components/dashboardTodos/components/statusColumn/components/statusColumnSortButton/css/statusColumnSortButton.css
+++ b/src/LandingPages/dashboardPage/components/dashboardTodos/components/statusColumn/components/statusColumnSortButton/css/statusColumnSortButton.css
@@ -7,4 +7,6 @@
   fill: none;
   width: 1rem;
   height: auto;
-}/*# sourceMappingURL=statusColumnSortButton.css.map */
+}
+
+/*# sourceMappingURL=statusColumnSortButton.css.map */
