--- a/src/LandingPages/dashboardPage/components/dashboardTodos/components/statusColumn/css/statusColumn.css
+++ b/src/LandingPages/dashboardPage/components/dashboardTodos/components/statusColumn/css/statusColumn.css
@@ -20,4 +20,6 @@
 }
 .status-column-container__ul-active {
   border-color: red;
-}/*# sourceMappingURL=statusColumn.css.map */
+}
+
+/*# sourceMappingURL=statusColumn.css.map */
