--- a/src/LandingPages/dashboardPage/components/taskboard/components/dropHereWrapper/css/dropHere.module.css
+++ b/src/LandingPages/dashboardPage/components/taskboard/components/dropHereWrapper/css/dropHere.module.css
@@ -19,4 +19,6 @@
   .dropHereDeleted {
     border: 1.3px dashed hsl(var(--destructive-foreground));
   }
-}/*# sourceMappingURL=dropHere.module.css.map */
+}
+
+/*# sourceMappingURL=dropHere.module.css.map */
