--- a/src/components/ui/cards/draggableCard/css/draggableCard.css
+++ b/src/components/ui/cards/draggableCard/css/draggableCard.css
@@ -44,13 +44,10 @@
   font-weight: 300;
   font-size: 14px;
   line-height: 1.15;
-  -webkit-hyphens: auto;
-          hyphens: auto;
+  hyphens: auto;
   text-wrap: balance;
   min-width: 0;
-  -webkit-user-select: text;
-     -moz-user-select: text;
-          user-select: text;
+  user-select: text;
   cursor: text;
 }
 .reveal-card__wrapper__header p {
@@ -58,9 +55,7 @@
   font-weight: 200;
   line-height: 1.1;
   color: hsl(var(--muted-foreground));
-  -webkit-user-select: text;
-     -moz-user-select: text;
-          user-select: text;
+  user-select: text;
   cursor: text;
 }
 .reveal-card__wrapper__badges {
@@ -68,9 +63,7 @@
   display: flex;
   gap: 0.5rem;
   flex-wrap: wrap;
-  -webkit-user-select: text;
-     -moz-user-select: text;
-          user-select: text;
+  user-select: text;
   cursor: text;
 }
 .reveal-card-permanently-deleting {
@@ -151,4 +144,6 @@
     font-weight: 600;
     font-size: 10px;
   }
-}/*# sourceMappingURL=draggableCard.css.map */
+}
+
+/*# sourceMappingURL=draggableCard.css.map */
