--- a/src/components/ui/suspenseFallback/css/suspenseFallback.css
+++ b/src/components/ui/suspenseFallback/css/suspenseFallback.css
@@ -91,4 +91,6 @@
   to {
     transform: rotate(360deg);
   }
-}/*# sourceMappingURL=suspenseFallback.css.map */
+}
+
+/*# sourceMappingURL=suspenseFallback.css.map */
