--- a/src/LandingPages/dashboardPage/components/dashboardSwitch/components/createDashboard/css/createDashboard.module.css
+++ b/src/LandingPages/dashboardPage/components/dashboardSwitch/components/createDashboard/css/createDashboard.module.css
@@ -48,4 +48,6 @@
     justify-content: center;
     padding: 1rem;
   }
-}/*# sourceMappingURL=createDashboard.module.css.map */
+}
+
+/*# sourceMappingURL=createDashboard.module.css.map */
