--- a/src/LandingPages/dashboardPage/components/dashboardTodos/css/categorizedTodos.css
+++ b/src/LandingPages/dashboardPage/components/dashboardTodos/css/categorizedTodos.css
@@ -3,4 +3,6 @@
   display: flex;
   gap: 1.5rem;
   overflow: visible;
-}/*# sourceMappingURL=categorizedTodos.css.map */
+}
+
+/*# sourceMappingURL=categorizedTodos.css.map */
