--- a/src/LandingPages/dashboardPage/components/progressSummary/css/progressSummary.module.css
+++ b/src/LandingPages/dashboardPage/components/progressSummary/css/progressSummary.module.css
@@ -125,7 +125,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: -moz-fit-content;
   width: fit-content;
   cursor: pointer;
 }
@@ -135,4 +134,6 @@
 .showMoreButton p {
   font-size: 1rem;
   white-space: nowrap;
-}/*# sourceMappingURL=progressSummary.module.css.map */
+}
+
+/*# sourceMappingURL=progressSummary.module.css.map */
