--- a/src/LandingPages/dashboardPage/components/taskboard/components/FilterTasksWrapper/filtering.module.css
+++ b/src/LandingPages/dashboardPage/components/taskboard/components/FilterTasksWrapper/filtering.module.css
@@ -5,7 +5,6 @@
   margin-top: 0.5rem;
 }
 .filterTaskColumn ul {
-  width: -moz-fit-content;
   width: fit-content;
   display: flex;
   flex-direction: column;
@@ -20,7 +19,6 @@
   gap: 1rem;
 }
 .filterTaskColumn button {
-  width: -moz-fit-content;
   width: fit-content;
   padding: 0.5rem 0.75rem;
   border-radius: 1rem;
@@ -43,4 +41,6 @@
   min-width: 100%;
   height: 1px;
   background: hsl(var(--foreground)/0.5);
-}/*# sourceMappingURL=filtering.module.css.map */
+}
+
+/*# sourceMappingURL=filtering.module.css.map */
