--- a/src/components/grid/gridContainerLogin/css/gridContainerLogin.css
+++ b/src/components/grid/gridContainerLogin/css/gridContainerLogin.css
@@ -26,4 +26,6 @@
   .grid-container-login {
     background-color: hsl(var(--card));
   }
-}/*# sourceMappingURL=gridContainerLogin.css.map */
+}
+
+/*# sourceMappingURL=gridContainerLogin.css.map */
