Adding DND instead

--- a/src/LandingPages/dashboardPage/components/dashboard/dashboardHeader/css/dashboardHeader.css
+++ b/src/LandingPages/dashboardPage/components/dashboard/dashboardHeader/css/dashboardHeader.css
@@ -1,7 +1,7 @@
 .dashboard-header {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 1rem;
 }
 .dashboard-header__header {
@@ -49,6 +49,12 @@
   }
   .dashboard-header__header__activeTab {
     font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .dashboard-header {
+    flex-direction: column;
+    gap: 0;
   }
 }
 
