--- a/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/taskboard.module.scss
+++ b/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/taskboard.module.scss
@@ -3,4 +3,22 @@
   grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   grid-template-rows: auto;
   gap: 14px;
+
+
+  scrollbar-width: thin;
+  scrollbar-color: hsl(var(--primary ) / 0.4) hsl(var(--card));
+
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: hsl(var(--primary ) / 0.4);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: hsl(var(--primary ) / 0.4);
+    border-radius: 4px;
+  }
 }
