--- a/src/components/createTodo/components/createTodoButton/css/createTodoButton.module.scss
+++ b/src/components/createTodo/components/createTodoButton/css/createTodoButton.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   gap: 5px;
   color: hsl(var(--white)) !important;
+  padding: 0.45rem;
   svg {
     width: 0.875rem;
     height: 0.875rem;
