--- a/src/components/grid/gridContainer/css/gridContainer.scss
+++ b/src/components/grid/gridContainer/css/gridContainer.scss
@@ -103,6 +103,7 @@
       "main";
 
     &__activeDashboardName {
+      top: calc(var(--nav-height) + 0.5rem);
       left: calc(0rem + 1rem + 0.75rem);
     }
 
