--- a/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.scss
+++ b/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/draggables/draggableColumn/draggableColumn.module.scss
@@ -3,6 +3,8 @@
 
   background-color: hsl(var(--card));
   height: fit-content;
+  max-height: calc(100svh - var(--column-top-offset) - 2rem);
+
   padding: 0 0.5rem 1rem;
 
   border-radius: var(--radius);
@@ -12,23 +14,89 @@
   flex-direction: column;
 
   transition: height 0.3s ease;
+  overflow: hidden;
 
 
   .columnHeader {
+    position: sticky;
+    top: 0;
     display: flex;
-    align-items: flex-start;
-    padding: 1rem 0 1rem;
-    background-color: hsl(var(--background));
+    align-items: center;
+    background-color: hsl(var(--card) / 0.65);
+    backdrop-filter: blur(8px);
     border-radius: calc(var(--radius) / 2);
     border: 1px solid transparent;
+    z-index: 10;
 
-    cursor: grab;
+    > * {
+      padding: 1rem 0;
+    }
+
+    .dragHandle {
+      flex: 1 1 auto;
+
+      .columnTitle {
+        font-size: 1rem;
+        line-height: 1;
+
+        .columnTitleTaskCount {
+          color: hsl(var(--muted-foreground));
+          font-size: 0.875rem;
+
+          line-height: 1;
+          margin-left: 4px;
+        }
+      }
 
 
+    }
+
+    &.draggableHeader {
+      .dragHandle {
+        cursor: grab;
+      }
+    }
+
+    .utilitiesAre {
+      flex: 0 0 auto;
+      padding: 0;
+      display: flex;
+      align-items: center;
+
+      .utilityButton {
+        box-sizing: content-box;
+        width: calc(1rem - 1px);
+        height: calc(1rem - 1px);
+        padding: 0.25rem;
+        cursor: pointer;
+        transition: all 0.2s ease;
+
+        background-color: hsl(var(--card));
+        border: 1px solid hsl(var(--muted));
+
+        color: hsl(var(--muted-foreground));
+        border-radius: 4px;
+
+        &:active {
+          transform: scale(0.95);
+        }
+
+        &:hover {
+          background-color: hsl(var(--muted));
+          border-color: hsl(var(--primary) / 0.25);
+          color: hsl(var(--foreground));
+        }
+
+        &:focus {
+          border-color: hsl(var(--primary))
+        }
+      }
+
+    }
   }
 
   .emptyContainer {
-    padding: 0.75rem;
+    padding: 1.25rem 0.75rem;
     border: 2px dashed hsl(var(--border));
     border-radius: 0.25rem;
     display: flex;
@@ -48,6 +116,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    overflow: auto;
 
 
   }
@@ -55,7 +124,8 @@
   .limitButton {
     margin-top: 1rem;
     width: 100%;
-    background-color: transparent;
+    background-color: hsl(var(--card) / 0.65);
+    backdrop-filter: blur(8px);
     color: hsl(var(--foreground));
     text-decoration: none;
     border: none;
@@ -64,6 +134,9 @@
     align-items: center;
     justify-content: center;
     font-size: 14px;
+
+    position: sticky;
+    bottom: 0;
 
 
     &:active, &:hover {
@@ -78,9 +151,6 @@
     }
   }
 
-  &.showHiddenTasks {
-    height: calc-size(fit-content);
-  }
 
 }
 
