--- a/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/responsiveStyles.module.css
+++ b/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/responsiveStyles.module.css
@@ -1,7 +1,8 @@
 @media screen and (max-width: 600px) {
   .taskboard {
+    flex: 1;
     display: flex;
-    scroll-snap-type: x proximity; /* Change from mandatory to proximity */
+    scroll-snap-type: x mandatory; /* Change from mandatory to proximity */
     overflow-x: auto;
     overflow-y: hidden;
     width: 100%;
@@ -20,7 +21,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: max-height;
+    height: fit-content;
     z-index: 1000;
     padding: 1rem;
     display: flex;
@@ -52,6 +53,11 @@
   }
   .columnPagination .paginationButtons .chevronLeft {
     rotate: 180deg;
+  }
+}
+@media screen and (min-width: 601px) {
+  .columnPagination {
+    display: none;
   }
 }
 
