--- a/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/responsiveStyles.module.scss
+++ b/src/LandingPages/dashboardPage/components/dashboard/kanbanBoard/responsiveStyles.module.scss
@@ -1,8 +1,9 @@
 @media screen and (max-width: 600px) {
 
   .taskboard {
+    flex: 1;
     display: flex;
-    scroll-snap-type: x proximity; /* Change from mandatory to proximity */
+    scroll-snap-type: x mandatory; /* Change from mandatory to proximity */
     overflow-x: auto;
     overflow-y: hidden;
     width: 100%;
@@ -27,7 +28,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: max-height;
+    height: fit-content;
     z-index: 1000;
 
     padding: 1rem;
@@ -59,18 +60,31 @@
     }
 
     .paginationButtons {
-        border: none;
-        outline: none;
-        background-color: transparent;
+      border: none;
+      outline: none;
+      background-color: transparent;
 
       .chevron {
       }
+
       .chevronLeft {
         rotate: 180deg;
       }
+
       .chevronRight {
 
       }
     }
   }
 }
+
+@media screen and (min-width: 601px) {
+  .columnPagination {
+    display: none;
+  }
+}
+
+
+
+
+
